--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,17 +2,13 @@
 <div id="wrapper">
     
     <div id="header" class="col-full">
-        <div id="logo"><a href="http://design.apievangelist.com" title=""><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-design.png" width="600" /></a></div>         
+        <div id="logo"><a href="http://theapistack.com" title=""><img src="https://s3.amazonaws.com/kinlane-productions/api-stack/api-stack-logo.png" width="600" /></a></div>         
     </div>
     
     <div id="navigation" class="col-full">
 
         <ul id="main-nav" class="nav fl">
             <li class="{% if page.title == 'API Design' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
-            <li class="{% if page.title == 'API Design - News and Analysis' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/blog/" title="News & Analysis">News & Analysis</a></li>
-            <li class="{% if page.title == 'API Design - Companies' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/companies.html" title="Companies">Companies</a></li>
-            <li class="{% if page.title == 'API Design - Building Blocks' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/building-blocks.html" title="Building Blocks">Building Blocks</a></li>
-            <li class="{% if page.title == 'API Design - Tools' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/tools.html" title="Tools">Tools</a></li>
             <li class="{% if page.title == 'About API Design' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About this Site</a></li>
          </ul>
         
