update google analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -117,8 +117,8 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-1119465-51']);
-  _gaq.push(['_setDomainName', 'apievangelist.com']);
+  _gaq.push(['_setAccount', 'UA-1119465-70']);
+  _gaq.push(['_setDomainName', 'theapistack.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
