adding tag cloud

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
     <div id="navigation" class="col-full">
 
         <ul id="main-nav" class="nav fl">
-            <li class="{% if page.title == 'API Design' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
+            <li class="{% if page.title == 'The API Stack - Home' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
+            <li class="{% if page.title == 'The API Stack' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/stack.html" title="The Stack">The Stack</a></li>
             <li class="{% if page.title == 'About API Design' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About this Site</a></li>
          </ul>
         
