--- a/_includes/top.html
+++ b/_includes/top.html
@@ -13,6 +13,7 @@
     <script src="/js/main.js" type="text/javascript"></script>
     <script src="/js/base64.js" type="text/javascript"></script>
     <script src="/js/utilities.js" type="text/javascript"></script>
+	<script src="/js/jquery.awesomeCloud-0.2.min.js"></script>
 
     <style type="text/css">
     #logo .site-title, #logo .site-description { display:block; }
@@ -99,7 +100,17 @@
         list-style-type:disc;
         }   
         
-    ul{padding-left: 50px; list-style:disc;}
+    ul{padding-left: 25px; list-style:disc;}
+    
+			.wordcloud {
+				border: 1px solid #000;
+				height: 7in;
+				margin: 0.5in auto;
+				padding: 0;
+				page-break-after: always;
+				page-break-inside: avoid;
+				width: 7in;
+			}    
     
     </style>  
   
