--- a/_includes/top.html
+++ b/_includes/top.html
@@ -7,9 +7,9 @@
 
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
     
-    <!--<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>-->
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     
     <script src="/js/mustache.js" type="text/javascript"></script>
     <script src="/js/main.js" type="text/javascript"></script>
