--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,17 +17,8 @@
               <a href="/">Home</a>
             </li>
             <li>
-              <a href="/news/">News</a>
-            </li>
-            <li>
-              <a href="/companies.html">Companies</a>
-            </li>  
-            <li>
-              <a href="/building-blocks.html">Building Blocks</a>
-            </li>             
-            <li>
-              <a href="/tools.html">Tools</a>
-            </li>                                              
+              <a href="/stack.html">The API Stack</a>
+            </li>                                            
           </ul>
         </div>        
         <script id="parterListingTemplate" type="text/template"> 
@@ -64,7 +55,7 @@
 
     <div class="content container">
     	
-      <p align="center"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-design.png" align="center" width="75%" style="padding-bottom: 10px;" /></p>	
+      <p align="center"><img src="https://s3.amazonaws.com/kinlane-productions/api-stack/api-stack-logo.png" align="center" width="75%" style="padding-bottom: 10px;" /></p>	
     	
       {{ content }}
       
